# Focalors_Poisson

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README_en.md  README_ja.md
base/: config.cpp  config.h  location_boundary.cpp  location_boundary.h  non_copyable.h  pch.h  scheme_type.cpp  scheme_type.h
base/domain/: domain2d.cpp  domain2d.h  domain2d_mpi.cpp  domain2d_mpi.h  domain3d.cpp  domain3d.h  geometry2d.cpp  geometry2d.h  geometry3d.cpp  geometry3d.h  geometry_tree.hpp  geometry_tree_old.hpp  variable.cpp  variable.h  variable2d.cpp  variable2d.h  variable2d_mpi.h  variable2d_slab_x.cpp  variable2d_slab_x.h  variable3d.cpp  variable3d.h
base/field/: field2.cpp  field2.h  field3.cpp  field3.h  field_macro.h
base/math/: compare.cpp  compare.h  random.cpp  random.h  sort.hpp
base/mesh_profile/: mesh_profile_2d_base.h  mesh_profile_2d_uniform.h  mesh_profile_3d_base.h
base/parallel/mpi/: distribute_slab.cpp  distribute_slab.h  mpi_misc.cpp  mpi_misc.h  transpose_pencil.cpp  transpose_pencil.h  transpose_slab.cpp  transpose_slab.h
base/parallel/omp/: enable_openmp.h
case/: CMakeLists.txt  H-shaped_pe_precision_single.cpp  complex_3d_pe.cpp  concat_new.cpp  concat_new_3d.cpp  concat_solver_2d_reference.cpp  concat_solver_2d_slab_x_validation.cpp  five_domain_pe_mpi_precision.cpp  five_domain_pe_precision.cpp  gmres_2d_reference.cpp  gmres_2d_slab_x_validation.cpp  mpi_concat_demo.cpp  mpi_demo.cpp  nine_domain_pe_precision.cpp  poisson_solver_2d_slab_x_validation.cpp  seven_domain_pe_precision.cpp  shur_mat_slab_x_vali.cpp  shur_mat_vali.cpp  single_3d_pe.cpp  single_3d_pe_test.cpp  test_distribute_slab.cpp  variable_slab_x_valition.cpp
case/precision/2d/: H-shaped_pe.cpp  five_domain_pe.cpp  five_domain_pe_mpi.cpp  seven_domain_pe.cpp
case/precision/3d/: multi_domain_pe.cpp  one_domain_pe.cpp
case/validation/2d/: concat_solver_reference.cpp  concat_solver_slab_x.cpp  gmres_reference.cpp  gmres_slab_x.cpp  poisson_solver_reference.cpp  poisson_solver_slab_x.cpp  redistribute_slab_buffer.cpp  redistribute_slab_field.cpp  shur_mat_reference.cpp  shur_mat_slab_x.cpp  transpose_slab.cpp  variable_slab_x.cpp
case/validation/3d/: one_domain_pe.cpp
case/validation_cases/: chasing_method_validation.cpp  concat_new.cpp  cross_shape.cpp  data_new.cpp  poisson_new.cpp  poisson_old.cpp  poisson_solver_3d_test.cpp
instrumentor/: func_sig.h  profiler.cpp  profiler.h  timer.cpp  timer.h
io/: case_base.hpp  common.h  config.cpp  config.h  csv_writer_2d.cpp  csv_writer_2d.h  csv_writer_3d.cpp  csv_writer_3d.h  csv_writer_concat.h  para_reader.cpp  para_reader.h  paras_reader.cpp  paras_reader.h  paras_record.cpp  paras_record.h  paras_record.hpp
pe/concat/: Schur_mat.cpp  Schur_mat.h  Schur_mat3d.cpp  Schur_mat3d.h  concat_solver2d.cpp  concat_solver2d.h  concat_solver2d_slab_x.cpp  concat_solver2d_slab_x.h  concat_solver3d.cpp  concat_solver3d.h  concat_solver_2d_mpi.h  concat_solver_shared.h  domain_solver.h  gmres.cpp  gmres.h  gmres_solver2d.cpp  gmres_solver2d.h  gmres_solver2d_slab_x.cpp  gmres_solver2d_slab_x.h  gmres_solver3d.cpp  gmres_solver3d.h  schur_mat2d.cpp  schur_mat2d.h  schur_mat2d_slab_x.cpp  schur_mat2d_slab_x.h  schur_mat3d.cpp  schur_mat3d.h
pe/concat_old/: Schur_mat.cpp  Schur_mat.h  Shur_mat.hpp  Shur_solver.cpp  gmres.h
pe/poisson/: chasing_method2d.cpp  chasing_method2d.h  chasing_method3d.cpp  chasing_method3d.h  chasing_method_base.cpp  chasing_method_base.h  poisson_fft2d.h  poisson_fft3d.cpp  poisson_fft3d.h  poisson_solver2d.cpp  poisson_solver2d.h  poisson_solver2d_base.cpp  poisson_solver2d_base.h  poisson_solver2d_slab_x.cpp  poisson_solver2d_slab_x.h  poisson_solver3d.cpp  poisson_solver3d.h  poisson_solver3d_base.cpp  poisson_solver3d_base.h
pe/poisson_old/: chasing_method_2d.hpp  chasing_method_3d.hpp  chasing_method_base.cpp  chasing_method_base.h  output_scalable.h  poisson_fft_2d.hpp  poisson_fft_3d.cpp  poisson_fft_3d.hpp  poisson_fft_interface.h  poisson_solver_2d.hpp  poisson_solver_3d.hpp  poisson_solver_interface.h
pe_mpi/: mpi_concat_poisson_solver2d.cpp  mpi_concat_poisson_solver2d.h  mpi_gmres_solver2d.cpp  mpi_gmres_solver2d.h  mpi_poisson_solver2d.cpp  mpi_poisson_solver2d.h  new_algorithm_draft.cpp
pe_mpi/poisson/: mpi_poisson_solver2d.cpp  mpi_poisson_solver2d.h
pe_mpi_distributed/: d_domain_2d.cpp  d_domain_2d.h  d_field_2d.cpp  d_field_2d.h  mpi_poisson_solver2d.cpp  mpi_poisson_solver2d.h
solver/: CMakeLists.txt  pch.h
solver/core/base/: field2.cpp  field2.h  field3.cpp  field3.h  field_utils.cpp  field_utils.hpp
solver/core/boundary/: boundary_type.h
solver/core/domain/: domain2d.cpp  domain2d.h  geometry2d.cpp  geometry2d.h  geometry_tree.hpp  geometry_tree_old.hpp  variable.cpp  variable.h
solver/core/mesh_profile/: mesh_profile_2d_base.h  mesh_profile_3d_base.h  mesh_profile_3d_uniform.h
solver/core/parallel/mpi/: mpi_misc.h  transpose_pencil.h
solver/io/: common.cpp  csv_writer_2d.cpp  csv_writer_2d.h  env_config.h
solver/pe/concat/: Schur_mat.h  Shur_mat.cpp  concat_solver2d.cpp  concat_solver2d.h  gmres.cpp  gmres.h  gmres_solver2d.cpp  gmres_solver2d.h
solver/pe/concat_new/: Schur_mat.cpp  Schur_mat.h  concat_solver2d.cpp  concat_solver2d.h  concat_solver2d_simple.cpp  concat_solver2d_simple.h  domain_solver.h  gmres.cpp  gmres.h  gmres_solver2d.cpp  gmres_solver2d.h
solver/pe/concat_old/: Schur_mat.h  Shur_mat.hpp  Shur_solver.hpp  gmres.cpp
solver/pe/poisson/: chasing_method_2d.hpp  chasing_method_3d.hpp  chasing_method_base.cpp  chasing_method_base.h  poisson_fft_2d.cpp  poisson_fft_2d.hpp  poisson_fft_3d.cpp  poisson_fft_3d.hpp  poisson_solver2d.cpp  poisson_solver2d.h  poisson_solver_2d.hpp  poisson_solver_3d.hpp  poisson_solver_interface.h
solver/pe/poisson_new/: chasing_method2d.cpp  chasing_method2d.h  chasing_method_base.cpp  chasing_method_base.h  poisson_fft2d.cpp  poisson_fft2d.h  poisson_solver2d.cpp  poisson_solver2d.h
solver/pe/poisson_old/: chasing_method_2d.hpp  chasing_method_3d.hpp  chasing_method_base.cpp
